Fixed alignment of skills section when in RTL direction

--- a/src/App.scss
+++ b/src/App.scss
@@ -412,6 +412,7 @@ header h1 {
 	color: white;
 	text-align: center;
 	position: relative;
+	padding-inline-start: unset;
 }
 
 footer {
